--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <!-- LOGO / GIF PLACEHOLDER -->
       <div class="coin-visual">
-        <img src="coin-placeholder.png" alt="Quantum Block Coin">
+        <img src="logo.jpg" alt="Quantum Block Coin">
         <!-- replace with your logo or gif -->
       </div>
 
@@ -32,7 +32,7 @@
 
       <div class="hero-buttons">
         <a href="https://x.com/QuantumBlockSOL" class="btn primary" target="_blank">Follow on X</a>
-        <a href="https://t.me/YOURTELEGRAM" class="btn secondary" target="_blank">Join Telegram</a>
+        <a href="https://t.me/QuantumBlockSolANN" class="btn secondary" target="_blank">Join Telegram</a>
       </div>
 
     </div>
