--- a/index.html
+++ b/index.html
@@ -15,13 +15,29 @@
 
   <!-- HERO -->
   <section class="hero">
-    <div class="hero-content">
+    <!-- Title + Circular Video Logo -->
 
-      <!-- LOGO / GIF PLACEHOLDER -->
-      <div class="coin-visual">
-        <img src="logo.jpg" alt="Quantum Block Coin">
-        <!-- replace with your logo or gif -->
-      </div>
+<div class="title-logo side-layout">
+
+<div class="logo-circle rotate-glow">
+
+<video autoplay muted loop
+
+playsinline>
+
+<source src="logoV.mp4"
+
+type="video/mp4">
+
+Your browser does not support the video tag.
+
+</video>
+
+</div>
+
+<h1 class="qb-title">Quantum Block</h1>
+
+</div>
 
       <h1>Bending Reality<br><span>at Quantum Speed</span></h1>
 
@@ -32,7 +48,7 @@
 
       <div class="hero-buttons">
         <a href="https://x.com/QuantumBlockSOL" class="btn primary" target="_blank">Follow on X</a>
-        <a href="https://t.me/QuantumBlockSolANN" class="btn secondary" target="_blank">Join Telegram</a>
+        <a href="t.me/+0tUL3ujYYKk0NjBI" class="btn secondary" target="_blank">Join Telegram</a>
       </div>
 
     </div>
