--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 playsinline>
 
-<source src="logoV.mp4"
+<source src="LogoV.mp4"
 
 type="video/mp4">
 
@@ -49,6 +49,8 @@ Your browser does not support the video tag.
       <div class="hero-buttons">
         <a href="https://x.com/QuantumBlockSOL" class="btn primary" target="_blank">Follow on X</a>
         <a href="t.me/+0tUL3ujYYKk0NjBI" class="btn secondary" target="_blank">Join Telegram</a>
+        <a href="https://pump.fun" class="btn " target="_blank">Where to Buy </a>
+        
       </div>
 
     </div>
@@ -164,11 +166,11 @@ Your browser does not support the video tag.
 
     <div class="whitepaper-grid">
       <div class="whitepaper-image">
-        <img src="whitepaper-1.jpg" alt="Whitepaper Page 1">
+        <img src="White1paprr.jpg" alt="Whitepaper Page 1">
       </div>
 
       <div class="whitepaper-image">
-        <img src="whitepaper-2.jpg" alt="Whitepaper Page 2">
+        <img src="White2paper-2.jpg" alt="Whitepaper Page 2">
       </div>
     </div>
 
@@ -180,7 +182,6 @@ Your browser does not support the video tag.
   <!-- FOOTER -->
   <footer>
     <p>© Quantum Block — Built on Solana ⚡</p>
-    <p class="small">This project is experimental and involves risk.</p>
   </footer>
 
 </body>
