--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Your browser does not support the video tag.
       <div class="hero-buttons">
         <a href="https://x.com/QuantumBlockSOL" class="btn primary" target="_blank">Follow on X</a>
         <a href="t.me/+0tUL3ujYYKk0NjBI" class="btn secondary" target="_blank">Join Telegram</a>
-        <a href="https://pump.fun" class="btn " target="_blank">Where to Buy </a>
+        <a href="https://pump.fun" class="btn buy " target="_blank">Where to Buy </a>
         
       </div>
 
