--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,34 +13,19 @@
 </head>
 
 <body>
-
-  <!-- HERO -->
-  <section class="hero">
-    <!-- Title + Circular Video Logo -->
-
+  <!-- Title + Circular Video Logo -->
 <div class="title-logo side-layout">
+  <div class="logo-circle rotate-glow">
+    <video autoplay muted loop playsinline>
+      <source src="LogoV.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
 
-<div class="logo-circle rotate-glow">
-
-<video autoplay muted loop
-
-playsinline>
-
-<source src="LogoV.mp4"
-
-type="video/mp4">
-
-Your browser does not support the video tag.
-
-</video>
-
+  <h1 class="qb-title">Quantum Block</h1>
 </div>
 
-<h1 class="qb-title">Quantum Block</h1>
-
-</div>
-
-      <h1>Bending Reality<br><span>at Quantum Speed</span></h1>
+<h1>Bending Reality<br><span>at Quantum Speed</span></h1>
 
       <p>
         A Solana native meme-powered asset where speed,
@@ -48,13 +34,10 @@ Your browser does not support the video tag.
 
       <div class="hero-buttons">
         <a href="https://x.com/QuantumBlockSOL" class="btn primary" target="_blank">Follow on X</a>
-        <a href="t.me/+0tUL3ujYYKk0NjBI" class="btn secondary" target="_blank">Join Telegram</a>
-        <a href="https://pump.fun" class="btn buy " target="_blank">Where to Buy </a>
-        
+        < href="t.me/+0tUL3ujYYKk0NjBI" class="btn secondary" target="_blank">Join Telegram</a>
+      <a href="https://pump.fun" class="btn buy" target="_blank"> Where to Buy</a>
       </div>
 
-    </div>
-  </section>
 
   <!-- STATS -->
   <section class="stats">
@@ -166,22 +149,23 @@ Your browser does not support the video tag.
 
     <div class="whitepaper-grid">
       <div class="whitepaper-image">
-        <img src="White1paprr.jpg" alt="Whitepaper Page 1">
+        <img src="White1paper.JPG" alt="Whitepaper Page 1">
       </div>
 
       <div class="whitepaper-image">
-        <img src="White2paper-2.jpg" alt="Whitepaper Page 2">
+        <img src="White2paper.JPG" alt="Whitepaper Page 2">
       </div>
     </div>
 
     <div class="whitepaper-cta">
-      <a href="whitepaper.pdf" class="btn primary" target="_blank">Read Full Whitepaper</a>
+      <a href="#top" class="btn primary">Read Full Whitepaper</a>
     </div>
   </section>
 
   <!-- FOOTER -->
   <footer>
     <p>© Quantum Block — Built on Solana ⚡</p>
+
   </footer>
 
 </body>
