--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,10 +33,11 @@
 
       <div class="hero-buttons">
         <a href="https://x.com/QuantumBlockSOL" class="btn primary" target="_blank">Follow on X</a>
-        < href="t.me/+0tUL3ujYYKk0NjBI" class="btn secondary" target="_blank">Join Telegram</a>
-      <a href="https://pump.fun" class="btn buy" target="_blank"> Where to Buy</a>
+        <a href="https://t.me/QuantumBlockSolANN" class="btn secondary" target="_blank">Join Telegram</a>
       </div>
 
+    </div>
+  </section>
 
   <!-- STATS -->
   <section class="stats">
@@ -165,8 +165,9 @@
   <!-- FOOTER -->
   <footer>
     <p>© Quantum Block — Built on Solana ⚡</p>
-
+    <p class="small">This project is experimental and involves risk.</p>
   </footer>
 
 </body>
+</html></body>
 </html>
