--- a/index.html
+++ b/index.html
@@ -13,16 +13,14 @@
 
 <body>
   <!-- Title + Circular Video Logo -->
-<div class="title-logo side-layout">
+<div class="title-logo vertical-layout">
+  <h1 class="qb-title neon-blue">Quantum Block</h1>
   <div class="logo-circle rotate-glow">
     <video autoplay muted loop playsinline>
       <source src="LogoV.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
-
-  <h1 class="qb-title">Quantum Block</h1>
-</div>
 
 <h1>Bending Reality<br><span>at Quantum Speed</span></h1>
 
@@ -33,7 +31,10 @@
 
       <div class="hero-buttons">
         <a href="https://x.com/QuantumBlockSOL" class="btn primary" target="_blank">Follow on X</a>
-        <a href="https://t.me/QuantumBlockSolANN" class="btn secondary" target="_blank">Join Telegram</a>
+        <a href="t.me/+0tUL3ujYYKk0NjBI" class="btn secondary" target="_blank">Join Telegram</a>
+        <br>
+        <a href="#" class="btn secondary buy-btn">Where to Buy</a>
+        <br>
       </div>
 
     </div>
@@ -169,5 +170,4 @@
   </footer>
 
 </body>
-</html></body>
 </html>
