--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
 
     <div class="whitepaper-grid">
       <div class="whitepaper-image">
-        <img src="White1paper.JPG" alt="Whitepaper Page 1">
+        <img src="paper1.jpg" alt="Whitepaper Page 1">
       </div>
 
       <div class="whitepaper-image">
-        <img src="White2paper.JPG" alt="Whitepaper Page 2">
+        <img src="paper2.jpg" alt="Whitepaper Page 2">
       </div>
     </div>
 
